# mmfqcount

./: .gitignore  Cargo.toml  flake.nix  result
.github/workflows/: ci.yml  release.yml
benches/: count.rs
scripts/: bench.sh
src/: README.txt  fastq_counter.rs
tests/: fastq_counter.rs
