[package]
name = "mmfqcount"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mmfqcount"
path = "src/fastq_counter.rs"

[dependencies]
flate2 = "1.0"
ahash = "=0.8.7"
clap = { version = "=4.4.18", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
flate2 = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1