[package]
name = "mmfqcount"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mmfqcount"
path = "src/fastq_counter.rs"

[dependencies]
flate2 = "1.0"
ahash = "=0.8.7"
clap = { version = "=4.4.18", features = ["derive"] }
rayon = "1"
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
tempfile = "3"
flate2 = "1.0"
assert_cmd = "2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "count"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1